traefik/ingressroutes/argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: routetcp-argocd
  namespace: traefik
spec:
  entryPoints:
    - argocd
  routes:
  - match: HostSNI(`*`)
    services:
    - name: argocd-server
      namespace: argocd
      port: 80
