traefik/ingressroutes/grafana.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-grafana
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: "Host(Path(`/grafana`))"
    # middlewares:
    #   - name: grafana-middleware-replacepath
    services:
    - name: grafana
      namespace: monitoring
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-middleware-replacepath
  namespace: traefik
spec:
  replacePath:
    path: /grafanka
