traefik/ingressroutes/ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroutetcp-grafana
  namespace: traefik
spec:
  entryPoints:
    - argocd
  routes:
  - match: HostSNI(`*`)
    services:
    - name: argocd-server
      namespace: argocd
      port: 443
