traefik/ingressroutes/nginx.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: routetcp-nginx-svc
  namespace: traefik
spec:
  entryPoints:
    - nginx
  routes:
  - match: HostSNI(`*`)
    services:
    - name: nginx
      namespace: nginx
      port: 9090
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-nginx
  namespace: traefik
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - kind: Rule
    match: "Host(`pepanginx-test04.zonkej.cz`)"
    # middlewares:
    #   - name: grafana-chain
    services:
    - name: nginx
      namespace: nginx
      port: 9090
  # tls:
  #   secretName: zonkej-secret
    
    
    # secretName: zonkej-secret

    # certificates:
    #   - certFile: /data/zonkej.cz.pem
    #     keyFile: /data/zonkej.cz.key
