traefik/ingressroutes/traefik-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingressroute-http
  namespace: ingressroutes
spec:
  entryPoints:
    - traefik
  routes:
  - kind: Rule
    match: "Host(`pepa-test04.zonkej.cz`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))"
#    match: Host(`traefik.localhost`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    # middlewares:
    #   - name: traefik-dashboard-replacepath    
    services:
      - name: api@internal
        kind: TraefikService
